[metadata]
name = Fortran-hooks
version = 0.1.0
description = Fortran pre-commit hooks
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/wiltonloch/fortran-hooks
author = Wilton Jaciel Loch
author_email = loch@dkrz.de
license = GPLv3
license_file = LICENSE
classifiers =
    License :: OSI Approved :: GPLv3 License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only

[options]
packages = find:
# Follows pre-commit minimums
python_requires = >=3.6.1
install_requires = fprettify
